test/types/string/validation/reinitFromCString.good
reinitFromCString.chpl:3: error: halt reached - Assigning a c_string with non-UTF-8 data
